programa/MMSuiteParser.py
# Generated from MMSuite.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MMSuiteParser ( Parser ):

    grammarFileName = "MMSuite.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'='", "'if'", "'{'", 
                     "'}'", "'else'", "'while'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUMINT", "NUMREAL", "VARIAVEL", 
                      "CADEIA", "OP_ARIT1", "OP_ARIT2", "OP_REL", "OP_BOOL", 
                      "COMENTARIO", "WS" ]

    RULE_programa = 0
    RULE_funcao = 1
    RULE_valores = 2
    RULE_declaracao = 3
    RULE_expressaoAritmetica = 4
    RULE_termoAritmetico = 5
    RULE_fatorAritmetico = 6
    RULE_expressaoRelacional = 7
    RULE_termoRelacional = 8
    RULE_comandos = 9
    RULE_comandoCondicao = 10
    RULE_comandoRepeticao = 11

    ruleNames =  [ "programa", "funcao", "valores", "declaracao", "expressaoAritmetica", 
                   "termoAritmetico", "fatorAritmetico", "expressaoRelacional", 
                   "termoRelacional", "comandos", "comandoCondicao", "comandoRepeticao" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    NUMINT=10
    NUMREAL=11
    VARIAVEL=12
    CADEIA=13
    OP_ARIT1=14
    OP_ARIT2=15
    OP_REL=16
    OP_BOOL=17
    COMENTARIO=18
    WS=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MMSuiteParser.FuncaoContext)
            else:
                return self.getTypedRuleContext(MMSuiteParser.FuncaoContext,i)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = MMSuiteParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 24
                self.funcao()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self, i:int=None):
            if i is None:
                return self.getTokens(MMSuiteParser.VARIAVEL)
            else:
                return self.getToken(MMSuiteParser.VARIAVEL, i)

        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MMSuiteParser.ComandosContext)
            else:
                return self.getTypedRuleContext(MMSuiteParser.ComandosContext,i)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao" ):
                listener.enterFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao" ):
                listener.exitFuncao(self)




    def funcao(self):

        localctx = MMSuiteParser.FuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(MMSuiteParser.VARIAVEL)
            self.state = 31
            self.match(MMSuiteParser.T__0)
            self.state = 32
            self.match(MMSuiteParser.VARIAVEL)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 33
                self.match(MMSuiteParser.T__1)
                self.state = 34
                self.match(MMSuiteParser.VARIAVEL)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(MMSuiteParser.T__2)
            self.state = 44
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 41
                    self.comandos() 
                self.state = 46
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMINT(self):
            return self.getToken(MMSuiteParser.NUMINT, 0)

        def NUMREAL(self):
            return self.getToken(MMSuiteParser.NUMREAL, 0)

        def CADEIA(self):
            return self.getToken(MMSuiteParser.CADEIA, 0)

        def VARIAVEL(self):
            return self.getToken(MMSuiteParser.VARIAVEL, 0)

        def getRuleIndex(self):
            return MMSuiteParser.RULE_valores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValores" ):
                listener.enterValores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValores" ):
                listener.exitValores(self)




    def valores(self):

        localctx = MMSuiteParser.ValoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_valores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(MMSuiteParser.VARIAVEL, 0)

        def valores(self):
            return self.getTypedRuleContext(MMSuiteParser.ValoresContext,0)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = MMSuiteParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(MMSuiteParser.VARIAVEL)
            self.state = 50
            self.match(MMSuiteParser.T__3)
            self.state = 51
            self.valores()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoAritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termoAritmetico(self):
            return self.getTypedRuleContext(MMSuiteParser.TermoAritmeticoContext,0)


        def expressaoAritmetica(self):
            return self.getTypedRuleContext(MMSuiteParser.ExpressaoAritmeticaContext,0)


        def OP_ARIT1(self):
            return self.getToken(MMSuiteParser.OP_ARIT1, 0)

        def getRuleIndex(self):
            return MMSuiteParser.RULE_expressaoAritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressaoAritmetica" ):
                listener.enterExpressaoAritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressaoAritmetica" ):
                listener.exitExpressaoAritmetica(self)



    def expressaoAritmetica(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MMSuiteParser.ExpressaoAritmeticaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expressaoAritmetica, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.termoAritmetico(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MMSuiteParser.ExpressaoAritmeticaContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expressaoAritmetica)
                    self.state = 56
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 57
                    self.match(MMSuiteParser.OP_ARIT1)
                    self.state = 58
                    self.termoAritmetico(0) 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermoAritmeticoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fatorAritmetico(self):
            return self.getTypedRuleContext(MMSuiteParser.FatorAritmeticoContext,0)


        def termoAritmetico(self):
            return self.getTypedRuleContext(MMSuiteParser.TermoAritmeticoContext,0)


        def OP_ARIT2(self):
            return self.getToken(MMSuiteParser.OP_ARIT2, 0)

        def getRuleIndex(self):
            return MMSuiteParser.RULE_termoAritmetico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermoAritmetico" ):
                listener.enterTermoAritmetico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermoAritmetico" ):
                listener.exitTermoAritmetico(self)



    def termoAritmetico(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MMSuiteParser.TermoAritmeticoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_termoAritmetico, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.fatorAritmetico()
            self._ctx.stop = self._input.LT(-1)
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MMSuiteParser.TermoAritmeticoContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_termoAritmetico)
                    self.state = 67
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 68
                    self.match(MMSuiteParser.OP_ARIT2)
                    self.state = 69
                    self.fatorAritmetico() 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FatorAritmeticoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMINT(self):
            return self.getToken(MMSuiteParser.NUMINT, 0)

        def NUMREAL(self):
            return self.getToken(MMSuiteParser.NUMREAL, 0)

        def VARIAVEL(self):
            return self.getToken(MMSuiteParser.VARIAVEL, 0)

        def expressaoAritmetica(self):
            return self.getTypedRuleContext(MMSuiteParser.ExpressaoAritmeticaContext,0)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_fatorAritmetico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFatorAritmetico" ):
                listener.enterFatorAritmetico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFatorAritmetico" ):
                listener.exitFatorAritmetico(self)




    def fatorAritmetico(self):

        localctx = MMSuiteParser.FatorAritmeticoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fatorAritmetico)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(MMSuiteParser.NUMINT)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(MMSuiteParser.NUMREAL)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(MMSuiteParser.VARIAVEL)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(MMSuiteParser.T__0)
                self.state = 79
                self.expressaoAritmetica(0)
                self.state = 80
                self.match(MMSuiteParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoRelacionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termoRelacional(self):
            return self.getTypedRuleContext(MMSuiteParser.TermoRelacionalContext,0)


        def expressaoRelacional(self):
            return self.getTypedRuleContext(MMSuiteParser.ExpressaoRelacionalContext,0)


        def OP_BOOL(self):
            return self.getToken(MMSuiteParser.OP_BOOL, 0)

        def getRuleIndex(self):
            return MMSuiteParser.RULE_expressaoRelacional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressaoRelacional" ):
                listener.enterExpressaoRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressaoRelacional" ):
                listener.exitExpressaoRelacional(self)



    def expressaoRelacional(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MMSuiteParser.ExpressaoRelacionalContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expressaoRelacional, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.termoRelacional()
            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MMSuiteParser.ExpressaoRelacionalContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expressaoRelacional)
                    self.state = 87
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 88
                    self.match(MMSuiteParser.OP_BOOL)
                    self.state = 89
                    self.termoRelacional() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermoRelacionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoAritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MMSuiteParser.ExpressaoAritmeticaContext)
            else:
                return self.getTypedRuleContext(MMSuiteParser.ExpressaoAritmeticaContext,i)


        def OP_REL(self):
            return self.getToken(MMSuiteParser.OP_REL, 0)

        def expressaoRelacional(self):
            return self.getTypedRuleContext(MMSuiteParser.ExpressaoRelacionalContext,0)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_termoRelacional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermoRelacional" ):
                listener.enterTermoRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermoRelacional" ):
                listener.exitTermoRelacional(self)




    def termoRelacional(self):

        localctx = MMSuiteParser.TermoRelacionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_termoRelacional)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.expressaoAritmetica(0)
                self.state = 96
                self.match(MMSuiteParser.OP_REL)
                self.state = 97
                self.expressaoAritmetica(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(MMSuiteParser.T__0)
                self.state = 100
                self.expressaoRelacional(0)
                self.state = 101
                self.match(MMSuiteParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(MMSuiteParser.DeclaracaoContext,0)


        def comandoCondicao(self):
            return self.getTypedRuleContext(MMSuiteParser.ComandoCondicaoContext,0)


        def comandoRepeticao(self):
            return self.getTypedRuleContext(MMSuiteParser.ComandoRepeticaoContext,0)


        def VARIAVEL(self):
            return self.getToken(MMSuiteParser.VARIAVEL, 0)

        def getRuleIndex(self):
            return MMSuiteParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = MMSuiteParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comandos)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.declaracao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.comandoCondicao()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.comandoRepeticao()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(MMSuiteParser.VARIAVEL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoCondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoRelacional(self):
            return self.getTypedRuleContext(MMSuiteParser.ExpressaoRelacionalContext,0)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MMSuiteParser.ComandosContext)
            else:
                return self.getTypedRuleContext(MMSuiteParser.ComandosContext,i)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_comandoCondicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoCondicao" ):
                listener.enterComandoCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoCondicao" ):
                listener.exitComandoCondicao(self)




    def comandoCondicao(self):

        localctx = MMSuiteParser.ComandoCondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comandoCondicao)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MMSuiteParser.T__4)
                self.state = 112
                self.expressaoRelacional(0)
                self.state = 113
                self.match(MMSuiteParser.T__5)
                self.state = 114
                self.comandos()
                self.state = 115
                self.match(MMSuiteParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(MMSuiteParser.T__4)
                self.state = 118
                self.expressaoRelacional(0)
                self.state = 119
                self.match(MMSuiteParser.T__5)
                self.state = 120
                self.comandos()
                self.state = 121
                self.match(MMSuiteParser.T__6)
                self.state = 122
                self.match(MMSuiteParser.T__7)
                self.state = 123
                self.match(MMSuiteParser.T__5)
                self.state = 124
                self.comandos()
                self.state = 125
                self.match(MMSuiteParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoRepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoRelacional(self):
            return self.getTypedRuleContext(MMSuiteParser.ExpressaoRelacionalContext,0)


        def comandos(self):
            return self.getTypedRuleContext(MMSuiteParser.ComandosContext,0)


        def getRuleIndex(self):
            return MMSuiteParser.RULE_comandoRepeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoRepeticao" ):
                listener.enterComandoRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoRepeticao" ):
                listener.exitComandoRepeticao(self)




    def comandoRepeticao(self):

        localctx = MMSuiteParser.ComandoRepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comandoRepeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MMSuiteParser.T__8)
            self.state = 130
            self.expressaoRelacional(0)
            self.state = 131
            self.match(MMSuiteParser.T__5)
            self.state = 132
            self.comandos()
            self.state = 133
            self.match(MMSuiteParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expressaoAritmetica_sempred
        self._predicates[5] = self.termoAritmetico_sempred
        self._predicates[7] = self.expressaoRelacional_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expressaoAritmetica_sempred(self, localctx:ExpressaoAritmeticaContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def termoAritmetico_sempred(self, localctx:TermoAritmeticoContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

    def expressaoRelacional_sempred(self, localctx:ExpressaoRelacionalContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 2)
         




